--- a/extract hidden reps.ipynb
+++ b/extract hidden reps.ipynb
@@ -27,15 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from tqdm import tqdm\n",
     "import logging\n",
     "import math\n",
     "import os\n",
@@ -65,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,46 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Namespace(activation_dropout=0.0, activation_fn='relu', adam_betas='(0.9, 0.98)', adam_eps=1e-08, adaptive_input=False, adaptive_softmax_cutoff=None, adaptive_softmax_dropout=0, all_gather_list_size=16384, arch='pruned_transformer_vaswani_wmt_en_de_big', attention_dropout=0.0, best_checkpoint_metric='loss', bf16=False, bpe=None, broadcast_buffers=False, bucket_cap_mb=25, checkpoint_suffix='', clip_norm=0.0, cpu=False, criterion='label_smoothed_cross_entropy', cross_self_attention=False, curriculum=0, data='data-bin/wmt16_en_de_bpe32k', data_buffer_size=2, dataset_impl=None, ddp_backend='c10d', decoder_attention_heads=16, decoder_embed_dim=1024, decoder_embed_path=None, decoder_ffn_embed_dim=4096, decoder_input_dim=1024, decoder_layerdrop=0, decoder_layers=6, decoder_layers_to_keep=None, decoder_learned_pos=False, decoder_normalize_before=False, decoder_output_dim=1024, device_id=0, disable_validation=False, distributed_backend='nccl', distributed_init_method=None, distributed_no_spawn=False, distributed_port=-1, distributed_rank=0, distributed_world_size=1, distributed_wrapper='DDP', dropout=0.3, empty_cache_freq=0, encoder_attention_heads=16, encoder_embed_dim=1024, encoder_embed_path=None, encoder_ffn_embed_dim=4096, encoder_layerdrop=0, encoder_layers=6, encoder_layers_to_keep=None, encoder_learned_pos=False, encoder_normalize_before=False, eval_bleu=False, eval_bleu_args=None, eval_bleu_detok='space', eval_bleu_detok_args=None, eval_bleu_print_samples=False, eval_bleu_remove_bpe=None, eval_tokenized_bleu=False, fast_stat_sync=False, final_sparsity=0.5, find_unused_parameters=False, fix_batches_to_gpus=False, fixed_validation_seed=None, fp16=False, fp16_init_scale=128, fp16_no_flatten_grads=False, fp16_scale_tolerance=0.0, fp16_scale_window=None, keep_best_checkpoints=-1, keep_interval_updates=-1, keep_last_epochs=-1, label_smoothing=0.1, layernorm_embedding=False, left_pad_source='True', left_pad_target='False', load_alignments=False, localsgd_frequency=3, log_format=None, log_interval=100, lr=[0.0007], lr_rewind=False, lr_scheduler='inverse_sqrt', lth_rewind_iter=1000, max_epoch=0, max_sentences=None, max_sentences_valid=None, max_source_positions=1024, max_target_positions=1024, max_tokens=3584, max_tokens_valid=3584, max_update=0, maximize_best_checkpoint_metric=False, memory_efficient_bf16=False, memory_efficient_fp16=False, min_loss_scale=0.0001, min_lr=-1, model_parallel_size=1, n_lth_iterations=1, no_cross_attention=False, no_epoch_checkpoints=False, no_last_checkpoints=False, no_progress_bar=False, no_save=False, no_save_optimizer_state=False, no_scale_embedding=False, no_token_positional_embeddings=False, nprocs_per_node=1, num_workers=1, optimizer='adam', optimizer_overrides='{}', patience=-1, prune_embeddings=False, quant_noise_pq=0, quant_noise_pq_block_size=8, quant_noise_scalar=0, quantization_config_path=None, required_batch_size_multiple=8, reset_dataloader=False, reset_lr_scheduler=False, reset_meters=False, reset_optimizer=False, restore_file='checkpoint_last.pt', save_dir='checkpoints', save_interval=1, save_interval_updates=0, seed=1, sentence_avg=False, share_all_embeddings=True, share_decoder_input_output_embed=False, skip_invalid_size_inputs_valid_test=False, slowmo_algorithm='LocalSGD', slowmo_momentum=None, source_lang=None, target_lang=None, task='translation', tensorboard_logdir='', threshold_loss_scale=None, tie_adaptive_weights=False, tokenizer=None, tpu=False, train_subset='train', truncate_source=False, update_freq=[1], upsample_primary=1, use_bmuf=False, use_old_adam=False, user_dir=None, valid_subset='valid', validate_interval=1, warmup_init_lr=1e-07, warmup_updates=4000, weight_decay=0.0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(args)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = tasks.setup_task(args)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "task = tasks.setup_task(args)\n",
+    "\n",
     "task.load_dataset(args.valid_subset, combine=False, epoch=1)\n",
-    "dataset = task.dataset(args.valid_subset)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "dataset = task.dataset(args.valid_subset)\n",
+    "\n",
     "checkpoint_dir = \"/home/raj/data/raj-learn/checkpoints/lr-rewind_0.75sparsity_0.2frac_30epochs/\"\n",
     "model_paths = [\"checkpoint_LTH0_epoch60.pt\",\n",
     "              \"checkpoint_LTH1_epoch60_sparsity0.168.pt\",\n",
@@ -122,12 +83,13 @@
     "              \"checkpoint_LTH4_epoch60_sparsity0.496.pt\", \n",
     "              \"checkpoint_LTH5_epoch60_sparsity0.565.pt\",\n",
     "              \"checkpoint_LTH6_epoch60_sparsity0.620.pt\",\n",
-    "              \"checkpoint_LTH7_epoch60_sparsity0.664.pt\"]\n"
+    "              \"checkpoint_LTH7_epoch60_sparsity0.664.pt\"]\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +307,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,46 +324,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "itr = task.get_batch_iterator(\n",
+    "            dataset=dataset,\n",
+    "            max_tokens=args.max_tokens,\n",
+    "            max_sentences=args.max_sentences,\n",
+    "            max_positions=utils.resolve_max_positions(\n",
+    "                task.max_positions(),\n",
+    "                *[m.max_positions() for m in models],\n",
+    "            ),\n",
+    "            ignore_invalid_inputs=args.skip_invalid_size_inputs_valid_test,\n",
+    "            required_batch_size_multiple=args.required_batch_size_multiple,\n",
+    "            seed=args.seed,\n",
+    "            num_shards=args.distributed_world_size,\n",
+    "            shard_id=args.distributed_rank,\n",
+    "            num_workers=args.num_workers,\n",
+    "        ).next_epoch_itr(shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/34 [00:00<?, ?it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "all_hidden = {}\n",
     "for batch in tqdm(itr):\n",
     "    ids = batch[\"id\"].cpu().numpy().tolist()\n",
     "    src_lens = batch[\"net_input\"][\"src_lengths\"].cpu().numpy()\n",
     "    enc_outputs = model.encoder(batch[\"net_input\"][\"src_tokens\"].cuda(), batch[\"net_input\"][\"src_lengths\"].cuda(), \n",
-    "                                        return_all_hiddens=False, return_all_attns=True)\n",
-    "    #print(enc_outputs.encoder_self_attns[0].shape)\n",
-    "    encenc_attns = [x.detach().cpu().numpy() for x in enc_outputs.encoder_self_attns]\n",
+    "                                        return_all_hiddens=True, return_all_attns=False)\n",
+    "#     print(enc_outputs.encoder_states[0].shape)\n",
+    "    enc_states = [x.detach().cpu().numpy() for x in enc_outputs.encoder_states]\n",
     "    del enc_outputs\n",
     "    \n",
     "    out, props = model(batch[\"net_input\"][\"src_tokens\"].cuda(), batch[\"net_input\"][\"src_lengths\"].cuda(), \\\n",
     "                        batch[\"net_input\"][\"prev_output_tokens\"].cuda())\n",
-    "    encdec_attns = [x.detach().cpu().numpy() for x in props[\"encdec_attns\"]]\n",
-    "    #print(encdec_attns[0].shape)\n",
-    "    decdec_attns = [x.detach().cpu().numpy() for x in props[\"decdec_attns\"]]\n",
-    "    #print(decdec_attns[0].shape)\n",
-    "\n",
-    "    print(batch[\"net_input\"][\"prev_output_tokens\"].shape)\n",
-    "    print(batch[\"net_input\"][\"prev_output_tokens\"][12,:])\n",
-    "    print(batch[\"target\"][12,:])\n",
+    "    dec_states = [x.detach().cpu().numpy() for x in props[\"inner_states\"]]\n",
+    "#     print(props[\"inner_states\"][0].shape)\n",
+    "#     print(batch[\"net_input\"][\"prev_output_tokens\"][0,:])\n",
     "    del out, props\n",
-    "    del batch\n",
+    "    \n",
     "\n",
     "    for i, id_ in enumerate(ids):\n",
-    "        all_attns = {\"encenc\": [], \"encdec\": [], \"decdec\": []}\n",
-    "        for attn in encenc_attns:\n",
-    "            all_attns[\"encenc\"].append(attn[i,:,:src_lens[i],:src_lens[i]])\n",
-    "        for attn in encdec_attns:\n",
-    "            all_attns[\"encdec\"].append(attn[:,i,:src_lens[i],:])\n",
-    "            print(attn[3,i,:,:])\n",
-    "        for attn in decdec_attns:\n",
-    "            all_attns[\"decdec\"].append(attn[i,:,:,:])\n",
-    "            #print(attn[i,3,:,:])\n",
-    "            break\n",
-    "        all_masks[id_] = all_attns\n",
+    "        hiddens = {\"enc_hidden\":[], \"dec_hidden\":[]}\n",
+    "        tgt_seq = batch[\"net_input\"][\"prev_output_tokens\"][i,:].numpy()\n",
+    "        tgt_len = tgt_seq.shape[0] - np.count_nonzero(tgt_seq == 1)\n",
+    "\n",
+    "        for j in range(6):\n",
+    "            hiddens[\"enc_hidden\"].append(enc_states[j][:src_lens[i],i,:])\n",
+    "            hiddens[\"dec_hidden\"].append(dec_states[j][:tgt_len,i,:])\n",
+    "        all_hidden[id_] = hiddens\n",
     "        \n",
+    "    del batch\n",
+    "    \n",
     "    break"
    ]
   }
@@ -422,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
